Add transact method with @Transactional annotation
This commit adds the transact method to the TransactionService class. The method uses the @Transactional annotation to ensure that the entire transaction is rolled back if any part of it fails. It also performs a series of checks and updates to create a new transaction and save it to the database.

The purpose of this change is to provide a new API endpoint that allows clients to perform transactions on their accounts. The endpoint takes a TransactionRequest object as input and returns a TransactionResponse object. If the transaction is successful, the response includes information about the updated account balance and transaction status.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,15 @@
-server.port=8082
-
-spring.application.name=transactions-service
-spring.datasource.url=jdbc:postgresql://localhost:5432/transactions_db
-spring.datasource.username=postgres
-spring.datasource.password=123456
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-
-myapp.account-service-url=http://account-service/account/test
-
-
-spring.jpa.hibernate.ddl-auto=update
-
+#server.port=8083
+#
+#spring.application.name=transactions-service
+#spring.datasource.url=jdbc:postgresql://localhost:5432/transactions_db
+#spring.datasource.username=postgres
+#spring.datasource.password=123456
+#
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#
+#myapp.account-service-url=http://account-service/api/v1/accounts/create-account
+#
+#spring.jpa.hibernate.ddl-auto=update
+#
