Update application configuration and API configuration
This commit updates the application configuration and API configuration files with the following changes:

1. Application Configuration:
   - Updated Kafka topic names:
     - Changed `transaction-creation` to `transaction.creation` in the `kafka.topic` section.
     - Added `transaction.balance-update` in the `kafka.topic` section.

2. API Configuration:
   - Updated base URLs for services:
     - Renamed `myapp.api.base-url.accounts-service` to `myapp.api.base-url.account-service`.
     - Renamed `myapp.api.base-url.user-service` to `myapp.api.base-url.user-service`.

These changes ensure that the application is properly configured and the API URLs are correctly set for communication with the account and user services.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
-      group-id: my-consumer-group
+      group-id: transactions-consumer-group
       auto-offset-reset: earliest
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
@@ -37,10 +37,14 @@ spring:
 
 kafka:
   topic:
-    transaction-creation: transaction-creation
+    transaction:
+      creation: transaction-creation
+      balance-update:
+#        user-service: user-service-balance-update
+        account-service: account-service-balance-update
 
 myapp:
   api:
     base-url:
-      accounts-service: http://account-service/api/v1/accounts/
+      account-service: http://account-service/api/v1/accounts/
       user-service: http://user-service/api/v1/users/
